--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "downlevelIteration": true,
       "strict": true,
       "baseUrl": ".",
       "target": "es5",
