feat: 对象回收、迭代器

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
-    "compilerOptions": {
-      "downlevelIteration": true,
-      "strict": true,
-      "baseUrl": ".",
-      "target": "es5",
-      "module": "commonjs",
-      "outDir": "lib",
-      "emitDeclarationOnly": true,
-      "declaration": true,
-      "newLine": "lf"
-    },
-    "exclude": ["node_modules"]
-  }
-  
+  "compilerOptions": {
+    "downlevelIteration": true,
+    "strict": true,
+    "baseUrl": ".",
+    "target": "es5",
+    "module": "commonjs",
+    "outDir": "lib",
+    "emitDeclarationOnly": true,
+    "declaration": true,
+    "newLine": "lf",
+    "paths": {
+      "shared-store-object/*": ["src/*"]
+    }
+  },
+  "exclude": ["node_modules", "src/__tests__"],
+  "include": ["src/index.ts"]
+}
