--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
   "name": "shared-store-object",
-  "version": "1.0.1",
-  "description": "共享存储对象 Shared Store Object",
+  "version": "1.0.2",
+  "description": "Shared Store Object",
   "main": "lib/index.js",
   "scripts": {
     "prebuild": "rm -rf lib",
-    "build": "swc src -d lib -C module.type=commonjs -C jsc.target=es5 -C jsc.loose=true -C jsc.minify.mangle=true -C jsc.minify.compress=true -C minify=true && tsc"
+    "build": "swc src/index.ts -d lib -C module.type=commonjs -C jsc.target=es5 -C jsc.loose=true -C jsc.minify.mangle=true -C jsc.minify.compress=true -C minify=true && tsc",
+    "test": "jest --watchAll --coverage"
   },
   "dependencies": {
     "use-sync-external-store": "1.2.0"
   },
   "devDependencies": {
     "@swc/cli": "0.1.62",
-    "@swc/core": "1.3.41",
-    "@types/node": "^18.15.3",
+    "@swc/core": "1.3.42",
+    "@swc/jest": "0.2.24",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
     "@types/use-sync-external-store": "^0.0.3",
-    "eslint-config-neko": "^1.0.20",
-    "typescript": "^5.0.2"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
+    "eslint-config-neko": "1.0.20"
   },
   "files": [
     "lib",
