feat: 更新前判断数据是否一致

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared-store-object",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Shared Store Object",
   "main": "lib/index.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "test": "jest --watchAll --coverage"
   },
   "dependencies": {
+  "@moneko/common": "1.0.32",
     "use-sync-external-store": "1.2.0"
   },
   "devDependencies": {
