--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
       "shared-store-object/*": ["src/*"]
     }
   },
-  "exclude": ["node_modules", "src/__tests__"],
+  "exclude": ["node_modules", "tests"],
   "include": ["src/index.ts"]
 }
