--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "keywords": [],
   "author": "moneko",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/monako97/shared-store-object/issues"
   },
