--- a/package.json
+++ b/package.json
@@ -5,26 +5,25 @@
   "main": "lib/index.js",
   "scripts": {
     "prebuild": "rm -rf lib",
-    "build": "swc src/index.ts -d lib -C module.type=commonjs -C jsc.target=es5 -C jsc.loose=true -C jsc.minify.mangle=true -C jsc.minify.compress=true -C minify=true && tsc",
+    "build": "swc src/index.ts -d lib --strip-leading-paths -C module.type=commonjs -C jsc.target=es5 -C jsc.loose=true -C jsc.minify.mangle=true -C jsc.minify.compress=true -C minify=true && tsc",
     "test": "jest --watchAll --coverage"
   },
   "dependencies": {
     "use-sync-external-store": "1.2.0"
   },
   "devDependencies": {
-    "@swc/cli": "0.1.62",
-    "@swc/core": "1.3.42",
-    "@swc/jest": "0.2.26",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.1",
-    "@types/use-sync-external-store": "^0.0.3",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "@swc/cli": "0.3.5",
+    "@swc/core": "1.3.107",
+    "@swc/jest": "0.2.31",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/use-sync-external-store": "^0.0.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "eslint-config-neko": "1.0.22"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "files": [
     "lib",
