--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared-store-object",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Shared Store Object",
   "main": "lib/index.js",
   "scripts": {
@@ -12,18 +12,18 @@
     "use-sync-external-store": "1.2.0"
   },
   "devDependencies": {
-    "@swc/cli": "0.3.9",
-    "@swc/core": "1.4.1",
+    "@swc/cli": "0.3.12",
+    "@swc/core": "1.4.12",
     "@swc/jest": "0.2.36",
-    "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
-    "@types/use-sync-external-store": "^0.0.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@testing-library/react": "14.2.2",
+    "@types/jest": "29.5.12",
+    "@types/use-sync-external-store": "0.0.6",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.4.4"
   },
   "files": [
     "lib",
