--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared-store-object",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Shared Store Object",
   "main": "lib/index.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "test": "jest --watchAll --coverage"
   },
   "dependencies": {
-    "use-sync-external-store": "1.2.2"
+    "@moneko/common": "1.7.2",
+    "use-sync-external-store": "1.4.0"
   },
   "devDependencies": {
     "@swc/cli": "0.5.0",
