--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared-store-object",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Shared Store Object",
   "main": "lib/index.js",
   "scripts": {
@@ -8,23 +8,24 @@
     "build": "swc src/index.ts -d lib --strip-leading-paths -C module.type=commonjs -C jsc.target=es5 -C jsc.loose=true -C jsc.minify.mangle=true -C jsc.minify.compress=true -C minify=true && tsc",
     "test": "jest --watchAll --coverage"
   },
+  "sideEffects": false,
   "dependencies": {
-    "@moneko/common": "1.7.6",
+    "@moneko/common": "1.7.7",
     "use-sync-external-store": "1.5.0"
   },
   "devDependencies": {
     "@swc/cli": "0.5.0",
     "@swc/core": "1.9.0",
     "@swc/jest": "0.2.37",
-    "@testing-library/react": "16.2.0",
+    "@testing-library/react": "16.3.0",
     "@types/jest": "29.5.14",
-    "@types/use-sync-external-store": "0.0.6",
+    "@types/use-sync-external-store": "1.5.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "ts-node": "10.9.2",
-    "typescript": "5.7.3"
+    "typescript": "5.8.3"
   },
   "files": [
     "lib",
