--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "shared-store-object",
-  "version": "1.3.1",
+  "version": "1.4.0-beta.0",
   "description": "Shared Store Object",
   "main": "lib/index.js",
   "scripts": {
     "prebuild": "rm -rf lib",
     "build": "swc src/index.ts -d lib --strip-leading-paths -C module.type=commonjs -C jsc.target=es5 -C jsc.loose=true -C jsc.minify.mangle=true -C jsc.minify.compress=true -C minify=true && tsc",
+    "postbuild": "jest --coverage",
     "test": "jest --watchAll --coverage"
   },
   "sideEffects": false,
@@ -14,18 +15,17 @@
     "use-sync-external-store": "1.6.0"
   },
   "devDependencies": {
-    "@swc/cli": "0.5.0",
-    "@swc/core": "1.9.0",
-    "@swc/jest": "0.2.37",
-    "@testing-library/react": "16.3.0",
-    "@types/jest": "29.5.14",
+    "@swc/cli": "0.7.8",
+    "@swc/core": "1.15.0",
+    "@swc/jest": "0.2.39",
+    "@types/jest": "30.0.0",
     "@types/use-sync-external-store": "1.5.0",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "ts-node": "10.9.2",
-    "typescript": "5.8.3"
+    "typescript": "5.9.3"
   },
   "files": [
     "lib",
@@ -36,7 +36,13 @@
     "type": "git",
     "url": "git+https://github.com/monako97/shared-store-object.git"
   },
-  "keywords": [],
+  "keywords": [
+    "shared-store-object",
+    "sso",
+    "shared-store",
+    "react state management",
+    "use-sync-external-store"
+  ],
   "author": "moneko",
   "license": "MIT",
   "bugs": {
