--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared-store-object",
-  "version": "1.4.0-beta.0",
+  "version": "1.4.0",
   "description": "Shared Store Object",
   "main": "lib/index.js",
   "scripts": {
@@ -8,6 +8,12 @@
     "build": "swc src/index.ts -d lib --strip-leading-paths -C module.type=commonjs -C jsc.target=es5 -C jsc.loose=true -C jsc.minify.mangle=true -C jsc.minify.compress=true -C minify=true && tsc",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll --coverage"
+  },
+  "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "require": "./lib/index.js"
+    }
   },
   "sideEffects": false,
   "dependencies": {
@@ -19,6 +25,8 @@
     "@swc/core": "1.15.0",
     "@swc/jest": "0.2.39",
     "@types/jest": "30.0.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@types/use-sync-external-store": "1.5.0",
     "jest": "30.2.0",
     "jest-environment-jsdom": "30.2.0",
